--- a/webUI/package.json
+++ b/webUI/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.0.6",
+    "axios": "^1.6.0",
     "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "qrcode": "^1.5.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
